# soulmate-matching

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  main.py  manage.py  pyproject.toml
backend/backend/: apps.py  settings.py
backend/bot/: callback_data.py  config.py  loader.py  states.py  texts.py  types.py
backend/bot/filters/: __init__.py  action.py
backend/bot/handlers/: close_match.py  conversation.py  exchange_contacts.py  questions.py  registration.py
backend/bot/integrations/common/: __init__.py  client.py  exceptions.py
backend/bot/keyboards/: close_match.py  exchange_contacts.py  matching.py  registration.py  utils.py
backend/bot/middlewares/: __init__.py  setup.py  thread.py  user.py
backend/bot/services/: matching.py
backend/bot/utils/: aio.py  message.py  validation.py
backend/core/: admin.py  admin_site.py  apps.py  choices.py  tasks.py
backend/core/managers/: __init__.py  base.py  contacts_exchange_request.py  match.py  question.py  user.py
backend/core/migrations/: 0001_initial.py  0002_create_objects.py
backend/core/models/: __init__.py  contacts_exchange_request.py  match.py  profile.py  question.py  user.py
nginx/: Dockerfile  http.conf
