[project]
name = "soulmate-matching"
version = "1.0.0"
description =  ""
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "celery>=5.5.2",
    "celery-types>=0.23.0",
    "django>=5.2.1",
    "django-stubs>=5.2.4",
    "environs>=14.1.1",
    "gunicorn>=23.0.0",
    "mypy>=1.18.1",
    "psycopg2>=2.9.10",
    "redis>=6.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[tool.ruff]
line-length = 79
target-version = "py311"
src = ["."]
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "COM812",  # trailing comma
    "RUF022",  # sort __all__
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
disable_error_code = ["union-attr", "var-annotated"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "backend.settings"
